# rk-mpp

mpp/: CMakeLists.txt
mpp/vproc/: CMakeLists.txt
mpp/vproc/inc/: rga_api.h
mpp/vproc/rga/: CMakeLists.txt  rga.cpp
mpp/vproc/rga3/: CMakeLists.txt  NormalRga.cpp  NormalRga.h  NormalRgaApi.cpp  NormalRgaContext.h  README.md  drmrga.h
mpp/vproc/rga3/test/: rga3_test.c
osal/linux/: os_log.cpp
osal/windows/: os_log.c
test/: mpi_dec_multi_test.c  mpi_dec_test.c  mpi_enc_mt_test.cpp  mpi_enc_test.c  mpi_rc2_test.c
utils/: mpi_dec_utils.c  mpi_dec_utils.h  mpi_enc_utils.c  mpi_enc_utils.h  mpp_enc_roi_utils.h  utils.c  utils.h
